Fix list item spacings

--- a/css/fred.css
+++ b/css/fred.css
@@ -31,11 +31,15 @@ h2, h3, h4, h5
 {
     font-weight: normal;
 }
-/* Use consistent bullets and increase line spacings */
+/* increase line spacings */
+ol > li, ul > li
+{
+    margin-bottom: 1em;
+}
+/* Use consistent bullets */
 ul
 {
     list-style-type: disc;
-    line-height: 2em;
 }
 
 /*** LOGOS ***/
